--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "axios": "^0.21.0",
     "babel-plugin-import": "^1.13.3",
     "craco-less": "^1.17.1",
-    "customize-cra": "^1.0.0",
     "history": "^5.0.0",
+    "i18next": "^19.8.4",
     "less": "^4.0.0",
     "less-loader": "^7.1.0",
     "mockjs": "^1.1.0",
@@ -21,6 +21,8 @@
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.8.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
