--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.4",
+    "antd-theme-generator": "^1.2.8",
     "axios": "^0.21.0",
     "babel-plugin-import": "^1.13.3",
     "craco-less": "^1.17.1",
@@ -32,7 +33,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "dotenv -e .env.development craco start",
+    "start": "node color.js && dotenv -e .env.development craco start",
     "build": "dotenv -e .env.production craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
